fix: Java 8 compatibility for NanobananaImageService and EpisodeController
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>